Corrige build e integra serviços
AdminBusiness: usa UserDAO (Optional) e chama cleanDatabaseAndSetupAdmin(adminId).

PhoneBusiness: adiciona getPhoneEntityById para uso no GoatFarmBusiness.

AddressBusiness/UserBusiness: cria métodos alias getAddressEntityById e getUserEntityById.

Correções adicionais: controllers corrompidos, enum/literal em GoatBreed, métodos EventMapper restaurados, remoção de BOM/annotation inválida.